fixes shrink issue on mobile, issue #104

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -229,12 +229,6 @@ Aligns Main Menu under button
   justify-content: space-between;
 }
 /*profile page css end*/
-.form-box {
-    margin-top: 40px;
-    margin-right: 50px;
-    padding-right: 65px;
-   
-}
 .form-top {
     overflow: hidden;
     padding: 0 15px 15px 25px;
